--- a/Android/App/app/src/main/res/values-v21/styles.xml
+++ b/Android/App/app/src/main/res/values-v21/styles.xml
@@ -7,4 +7,13 @@
     <item name="android:windowTranslucentStatus">true</item>
     <item name="android:fitsSystemWindows">true</item>
   </style>
+
+  <style name="AppThemeVector" parent="Vector.AppTheme" />
+
+  <style name="AppTheme.OverlapSystemBarVector" parent="Vector.AppTheme">
+    <item name="android:windowDrawsSystemBarBackgrounds">false</item>
+    <item name="android:statusBarColor">@android:color/transparent</item>
+    <item name="android:windowTranslucentStatus">true</item>
+    <item name="android:fitsSystemWindows">true</item>
+  </style>
 </resources>
