--- a/Android/App/app/src/main/res/layout/activity_add_vector_batch_survey.xml
+++ b/Android/App/app/src/main/res/layout/activity_add_vector_batch_survey.xml
@@ -15,138 +15,146 @@
     android:theme="?attr/actionBarTheme"
     app:titleTextColor="@color/colorVectorToolbarText"/>
 
-  <LinearLayout
-    android:id="@+id/vectorBatchForm"
+  <ScrollView
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingStart="@dimen/activity_horizontal_margin"
-    android:paddingEnd="@dimen/activity_horizontal_margin"
-    android:orientation="vertical"
-    android:descendantFocusability="beforeDescendants"
-    android:focusableInTouchMode="true">
+    android:layout_height="match_parent">
 
-    <android.support.design.widget.TextInputLayout
+    <LinearLayout
+      android:id="@+id/vectorBatchForm"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content">
-      <android.support.design.widget.TextInputEditText
-        android:id="@+id/batchId"
+      android:layout_height="match_parent"
+      android:paddingTop="@dimen/activity_vertical_margin"
+      android:paddingBottom="@dimen/activity_vertical_margin"
+      android:paddingStart="@dimen/activity_horizontal_margin"
+      android:paddingEnd="@dimen/activity_horizontal_margin"
+      android:orientation="vertical"
+      android:descendantFocusability="beforeDescendants"
+      android:focusableInTouchMode="true">
+
+      <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <android.support.design.widget.TextInputEditText
+          android:id="@+id/batchId"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:ems="10"
+          android:inputType="text|textPersonName"
+          android:hint="Batch ID"
+          android:maxLines="1"
+          android:focusable="false"
+          android:clickable="false"/>
+      </android.support.design.widget.TextInputLayout>
+
+      <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="text|textPersonName"
-        android:hint="Batch ID"
-        android:maxLines="1"
-        android:focusable="false"
-        android:clickable="false"/>
-    </android.support.design.widget.TextInputLayout>
+        android:layout_marginTop="@dimen/survey_field_top_margin">
+        <android.support.design.widget.TextInputEditText
+          android:id="@+id/batchDate"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:ems="10"
+          android:hint="Date Collected"
+          android:clickable="true"
+          android:focusable="false"
+          android:inputType="date"
+          android:maxLines="1" />
+      </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="@dimen/survey_field_top_margin">
-      <android.support.design.widget.TextInputEditText
-        android:id="@+id/batchDate"
+      <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Date Collected"
-        android:clickable="true"
-        android:focusable="false"
-        android:inputType="date"
-        android:maxLines="1" />
-    </android.support.design.widget.TextInputLayout>
+        android:layout_marginTop="@dimen/survey_field_top_margin">
+        <android.support.design.widget.TextInputEditText
+          android:id="@+id/batchLocation"
+          android:layout_width="fill_parent"
+          android:layout_height="wrap_content"
+          android:drawableEnd="@drawable/location_search"
+          android:clickable="true"
+          android:focusable="false"
+          android:hint="Tap to update location"
+          android:inputType="text"
+          android:maxLines="1"/>
 
-    <android.support.design.widget.TextInputLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="@dimen/survey_field_top_margin">
-      <android.support.design.widget.TextInputEditText
-        android:id="@+id/batchLocation"
+        <ProgressBar
+          android:id="@+id/batchLocationProgress"
+          style="@android:style/Widget.Material.ProgressBar.Horizontal"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_alignEnd="@id/batchLocation"
+          android:layout_alignStart="@id/batchLocation"
+          android:layout_alignTop="@id/batchLocation"
+          android:indeterminate="true"
+          android:visibility="gone"/>
+      </android.support.design.widget.TextInputLayout>
+
+      <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:drawableEnd="@drawable/location_search"
-        android:clickable="true"
-        android:focusable="false"
-        android:hint="Tap to update location"
-        android:inputType="text"
-        android:maxLines="1"/>
+        android:layout_marginTop="@dimen/survey_field_top_margin">
+          <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Territory"
+            />
 
-      <ProgressBar
-        android:id="@+id/batchLocationProgress"
-        style="@android:style/Widget.Material.ProgressBar.Horizontal"
+        <RadioGroup
+          android:id="@+id/batchTerritory"
+          android:layout_width="fill_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="24dp"
+          android:orientation="horizontal">
+
+          <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            android:text="Urban"/>
+
+          <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="44dp"
+            android:text="Suburban"/>
+        </RadioGroup>
+
+      </RelativeLayout>
+
+      <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@id/batchLocation"
-        android:layout_alignStart="@id/batchLocation"
-        android:layout_alignTop="@id/batchLocation"
-        android:indeterminate="true"
-        android:visibility="gone"/>
-    </android.support.design.widget.TextInputLayout>
+        android:layout_marginTop="@dimen/survey_field_top_margin">
 
-    <RelativeLayout
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="@dimen/survey_field_top_margin">
-        <TextView
-          android:layout_width="wrap_content"
+        <android.support.design.widget.TextInputEditText
+          android:id="@+id/batchTemperature"
+          android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:text="Territory"
-          />
+          android:layout_marginTop="@dimen/survey_field_top_margin"
+          android:ems="10"
+          android:hint="Temperature (Cº)"
+          android:inputType="numberSigned"
+          android:maxLines="1"/>
+      </android.support.design.widget.TextInputLayout>
 
-      <RadioGroup
-        android:id="@+id/batchTerritory"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:orientation="horizontal">
-
-        <RadioButton
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:checked="false"
-          android:text="Urban"/>
-
-        <RadioButton
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginStart="44dp"
-          android:text="Suburban"/>
-      </RadioGroup>
-
-    </RelativeLayout>
-
-    <android.support.design.widget.TextInputLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="@dimen/survey_field_top_margin">
-      <android.support.design.widget.TextInputEditText
-        android:id="@+id/batchTemperature"
+      <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="number"
-        android:layout_marginTop="@dimen/survey_field_top_margin"
-        android:hint="Temperature (Cº)"
-        android:maxLines="1" />
-    </android.support.design.widget.TextInputLayout>
+        android:layout_marginTop="@dimen/survey_field_top_margin">
 
-    <android.support.design.widget.TextInputLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="@dimen/survey_field_top_margin">
-      <android.support.design.widget.TextInputEditText
-        android:id="@+id/batchWeatherConditions"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="text"
-        android:layout_marginTop="@dimen/survey_field_top_margin"
-        android:hint="Weather Conditions (eg. Cloudy)" />
-    </android.support.design.widget.TextInputLayout>
+        <android.support.design.widget.TextInputEditText
+          android:id="@+id/batchWeatherConditions"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="@dimen/survey_field_top_margin"
+          android:ems="10"
+          android:hint="Weather Conditions (eg. Cloudy)"
+          android:inputType="text|textCapSentences|textAutoCorrect|textMultiLine"
+          android:maxLines="5"/>
+      </android.support.design.widget.TextInputLayout>
 
-  </LinearLayout>
+    </LinearLayout>
 
+  </ScrollView>
 
 </LinearLayout>
