--- a/Android/App/app/src/main/res/layout/activity_main.xml
+++ b/Android/App/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/mainView"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
@@ -32,5 +33,15 @@
     android:background="@color/colorVectorPrimaryDark"
     android:textColor="@color/colorIcons"
     android:text="Add Vector Batch" />
+
+  <Button
+    android:id="@+id/vectorSurveyButton"
+    android:layout_width="200dp"
+    android:layout_height="44dp"
+    android:layout_gravity="center_horizontal"
+    android:layout_marginTop="44dp"
+    android:background="@color/colorVectorPrimaryDark"
+    android:textColor="@color/colorIcons"
+    android:text="Add Vector" />
 
 </LinearLayout>
