--- a/Android/App/app/src/main/res/values-v21/styles.xml
+++ b/Android/App/app/src/main/res/values-v21/styles.xml
@@ -2,18 +2,16 @@
   <style name="AppTheme" parent="Base.AppTheme" />
 
   <style name="AppTheme.OverlapSystemBar" parent="Base.AppTheme">
-    <item name="android:windowDrawsSystemBarBackgrounds">false</item>
+    <item name="android:windowDrawsSystemBarBackgrounds">true</item>
     <item name="android:statusBarColor">@android:color/transparent</item>
     <item name="android:windowTranslucentStatus">true</item>
-    <item name="android:fitsSystemWindows">true</item>
   </style>
 
   <style name="AppThemeVector" parent="Vector.AppTheme" />
 
   <style name="AppTheme.OverlapSystemBarVector" parent="Vector.AppTheme">
-    <item name="android:windowDrawsSystemBarBackgrounds">false</item>
+    <item name="android:windowDrawsSystemBarBackgrounds">true</item>
     <item name="android:statusBarColor">@android:color/transparent</item>
     <item name="android:windowTranslucentStatus">true</item>
-    <item name="android:fitsSystemWindows">true</item>
   </style>
 </resources>
