--- a/Android/App/app/src/main/res/layout/vector_form.xml
+++ b/Android/App/app/src/main/res/layout/vector_form.xml
@@ -12,20 +12,36 @@
   android:paddingStart="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin">
 
+  <RelativeLayout
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content">
+    <TextView
+      android:layout_marginStart="4dp"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:textSize="12sp"
+      android:text="Mosquito Species"/>
+    <Spinner
+      style="@style/Widget.AppCompat.Spinner.Underlined"
+      android:id="@+id/vectorSpecies"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="@dimen/survey_field_top_margin"
+      android:spinnerMode="dropdown"/>
+  </RelativeLayout>
+
   <android.support.design.widget.TextInputLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-
     <android.support.design.widget.TextInputEditText
-      android:id="@+id/vectorSpecies"
+      android:id="@+id/vectorSpeciesOther"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:clickable="true"
+      android:inputType="textNoSuggestions"
+      android:hint="@string/specify_species"
       android:ems="10"
-      android:focusable="true"
-      android:hint="Mosquito Species"
-      android:inputType="text|textPersonName"
-      android:maxLines="1"/>
+      android:lines="1"
+      android:visibility="gone"/>
   </android.support.design.widget.TextInputLayout>
 
   <RelativeLayout
@@ -34,10 +50,11 @@
     android:layout_marginTop="@dimen/survey_field_top_margin">
 
     <TextView
+      android:layout_marginStart="4dp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Gender"
-      />
+      android:textSize="12sp"
+      android:text="Gender"/>
 
     <RadioGroup
       android:id="@+id/vectorGender"
@@ -75,10 +92,11 @@
     android:layout_marginTop="@dimen/survey_field_top_margin">
 
     <TextView
+      android:layout_marginStart="4dp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Stage"
-      />
+      android:textSize="12sp"
+      android:text="Stage"/>
 
     <RadioGroup
       android:id="@+id/vectorStage"
@@ -116,10 +134,11 @@
     android:layout_marginTop="@dimen/survey_field_top_margin">
 
     <TextView
+      android:layout_marginStart="4dp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Has the mosquito fed?"
-      />
+      android:textSize="12sp"
+      android:text="Has the mosquito fed?"/>
 
     <RadioGroup
       android:id="@+id/vectorDidFeed"
@@ -167,5 +186,29 @@
       android:maxLines="1"
       android:text="Tap to connect and retrieve"/>
   </android.support.design.widget.TextInputLayout>
+
+  <RelativeLayout
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="12dp">
+    <TextView
+      android:id="@+id/photoLabel"
+      android:layout_marginStart="4dp"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:textSize="12sp"
+      android:text="Photo"/>
+    <ImageButton
+      android:id="@+id/photoButton"
+      android:layout_marginTop="16dp"
+      android:layout_width="96dp"
+      android:layout_height="72dp"
+      android:src="@drawable/ic_add_a_photo_grey_900_24dp"/>
+    <ImageView
+      android:id="@+id/photoView"
+      android:layout_marginTop="24dp"
+      android:layout_width="wrap_content"
+      android:layout_height="72dp"/>
+  </RelativeLayout>
 
 </LinearLayout>
