--- a/Android/App/app/src/main/res/layout/activity_add_vector_survey.xml
+++ b/Android/App/app/src/main/res/layout/activity_add_vector_survey.xml
@@ -3,7 +3,7 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
-  android:id="@+id/vectorBatchRoot"
+  android:id="@+id/vectorSurveyRoot"
   android:orientation="vertical"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
@@ -18,14 +18,20 @@
     android:theme="?attr/actionBarTheme"
     app:titleTextColor="@color/colorVectorToolbarText"/>
 
-  <android.support.v4.widget.NestedScrollView
+  <android.support.design.widget.CoordinatorLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:clipToPadding="false"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    android:layout_height="match_parent">
 
-    <include layout="@layout/vector_form"/>
+    <android.support.v4.widget.NestedScrollView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:clipToPadding="false"
+      app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-  </android.support.v4.widget.NestedScrollView>
+      <include layout="@layout/vector_form"/>
+    </android.support.v4.widget.NestedScrollView>
+
+    <include layout="@layout/photo_bottom_sheet"/>
+  </android.support.design.widget.CoordinatorLayout>
 
 </LinearLayout>
