--- a/Android/App/app/src/main/res/layout/vector_form.xml
+++ b/Android/App/app/src/main/res/layout/vector_form.xml
@@ -31,8 +31,10 @@
   </RelativeLayout>
 
   <android.support.design.widget.TextInputLayout
+    android:id="@+id/vectorSpeciesOtherLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:visibility="gone">
     <android.support.design.widget.TextInputEditText
       android:id="@+id/vectorSpeciesOther"
       android:layout_width="match_parent"
@@ -40,8 +42,7 @@
       android:inputType="textNoSuggestions"
       android:hint="@string/specify_species"
       android:ems="10"
-      android:lines="1"
-      android:visibility="gone"/>
+      android:lines="1"/>
   </android.support.design.widget.TextInputLayout>
 
   <RelativeLayout
@@ -184,7 +185,9 @@
       android:hint="DNA extract"
       android:inputType="text|textNoSuggestions"
       android:maxLines="1"
-      android:text="Tap to connect and retrieve"/>
+      android:text="Tap to connect and retrieve"
+      android:focusable="false"
+      android:clickable="true"/>
   </android.support.design.widget.TextInputLayout>
 
   <RelativeLayout
@@ -198,17 +201,24 @@
       android:layout_height="wrap_content"
       android:textSize="12sp"
       android:text="Photo"/>
-    <ImageButton
-      android:id="@+id/photoButton"
-      android:layout_marginTop="16dp"
-      android:layout_width="96dp"
-      android:layout_height="72dp"
-      android:src="@drawable/ic_add_a_photo_grey_900_24dp"/>
-    <ImageView
-      android:id="@+id/photoView"
-      android:layout_marginTop="24dp"
+    <LinearLayout
       android:layout_width="wrap_content"
-      android:layout_height="72dp"/>
+      android:layout_height="wrap_content"
+      android:orientation="horizontal">
+      <Button
+        android:id="@+id/photoButton"
+        android:layout_marginTop="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/insert_photo"/>
+      <ImageView
+        android:id="@+id/photoView"
+        android:layout_marginTop="24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="72dp"
+        android:visibility="gone"
+        android:contentDescription="@string/survey_photo"/>
+    </LinearLayout>
   </RelativeLayout>
 
 </LinearLayout>
