--- a/Android/App/app/src/main/res/layout/activity_vector_batch_detail.xml
+++ b/Android/App/app/src/main/res/layout/activity_vector_batch_detail.xml
@@ -41,7 +41,7 @@
         android:background="@color/colorVectorPrimary"
         android:theme="?attr/actionBarTheme"
         app:layout_collapseMode="pin"
-        app:titleTextColor="@color/colorVectorToolbarText"/>
+        app:titleTextColor="@color/colorToolbarText"/>
 
     </android.support.design.widget.CollapsingToolbarLayout>
 
