Graphics - icons and app icon

--- a/Android/App/app/src/main/res/values/dimens.xml
+++ b/Android/App/app/src/main/res/values/dimens.xml
@@ -15,4 +15,5 @@
   <dimen name="survey_item_text_date">11sp</dimen>
   <!-- Form spacing -->
   <dimen name="survey_field_top_margin">24dp</dimen>
+  <dimen name="appbar_padding_top">8dp</dimen>
 </resources>
