--- a/Android/App/app/src/main/res/drawable/preggers.xml
+++ b/Android/App/app/src/main/res/drawable/preggers.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:viewportHeight="24.0" android:viewportWidth="24.0" android:width="24dp">
-    <path android:fillColor="@color/colorIcons" android:pathData="M9,16.2L4.8,12l-1.4,1.4L9,19 21,7l-1.4,-1.4L9,16.2z"/>
+    <path android:fillColor="@color/colorIconsReverse" android:pathData="M9,4c0,-1.11 0.89,-2 2,-2s2,0.89 2,2 -0.89,2 -2,2 -2,-0.89 -2,-2zM16,13c-0.01,-1.34 -0.83,-2.51 -2,-3 0,-1.66 -1.34,-3 -3,-3s-3,1.34 -3,3v7h2v5h3v-5h3v-4z"/>
 </vector>
