--- a/Android/App/app/src/main/res/menu/drawer_actions.xml
+++ b/Android/App/app/src/main/res/menu/drawer_actions.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
   <item
-    android:id="@+id/logout_menu_item"
+    android:id="@+id/menuItemLogout"
     android:icon="@drawable/logout"
     android:title="@string/action_sign_out" />
   <item
-    android:id="@+id/settings_menu_item"
+    android:id="@+id/menuItemSettings"
     android:icon="@drawable/settings"
     android:title="@string/action_settings" />
 </menu>
